ho aggiunto style.css

--- a/bio.html
+++ b/bio.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="intestazione">
         <h1>biografia dei creatori</h1>
         <nav>
-            <a href="index.html">HOME</a>
-            <a href="bio.html">BIO</a>
-            <a href="tavola.html">TAVOLA</a>
+            <a class="menu" href="index.html">HOME</a>
+            <a class="menu" href="bio.html">BIO</a>
+            <a class="menu" href="tavola.html">TAVOLA</a>
         </nav>
     </header>
     <main>
-<div>
-        <h3>Giorgia Fogliano</h3>
-        <img width="300" src="Gatto.jpg" alt="">
-        <p>Sono la studente del corso afm </p>
+<div class="ciao">
+        <h3 class="giorgia">Giorgia Fogliano</h3>
+        <img  width="300" src="Gatto.jpg" alt="">
+        <p class="cio">Sono la studente del corso afm </p>
         <a href="https://www.youtube.com/watch?v=u6unJQownW4" target="_blank" rel="noopener noreferrer">straykids</a>
 </div>
-<div>
-    <h3>Madia Fabiana</h3>
+<div class="ciao">
+    <h3 class="fabiana">Madia Fabiana</h3>
     <img width="300" src="coniglio.jpg" alt="">
-    <p>Sono la studente del corso AFM </p>
+    <p class="cio">Sono la studente del corso AFM </p>
     <a href="https://it.wikipedia.org/wiki/Berlino" target="_blank" rel="noopener noreferrer">Berlino</a>
 </div>
     </main>
